@@ -12,7 +12,8 @@ public class GhidraBoyW3bOrder extends GhidraBoyPredicatedCalls {
     out=Path.of(getScriptArgs()[0]);Files.createDirectories(out);
     var helper=new SoftwareCallModel.Template(SoftwareCallModel.Family.REGISTER_JP,0x28,0,null);
     var config=new SoftwareCallValidation.Configuration(0x180,helper,SoftwareCallModel.EntryTransfer.HARDWARE_CALL,0xc100,new SoftwareCallModel.Registers(2,0,2,0x1234,0x4000),MapperState.reset());
-    var review=SoftwareCallApplication.preview(currentProgram,List.of(config),monitor);save("producer-continuations.json",review.stateContinuations());
+    boolean stock=Arrays.asList(getScriptArgs()).contains("stock");
+    var review=stock?SoftwareCallApplication.previewStock(currentProgram,List.of(config),monitor):SoftwareCallApplication.preview(currentProgram,List.of(config),monitor);save("producer-continuations.json",review.stateContinuations());
     var graph=review.stateContinuations().get("0180");if(graph==null)throw new IllegalStateException("Missing actual production exact continuation");
     var lower=new ArrayList<Object>();for(var step:graph.steps())if(step.afterCall()!=null) {
       var candidates=graph.steps().stream().filter(n->n.callDepth()==step.callDepth()&&n.before().equals(step.afterCall())).toList();
@@ -20,7 +21,7 @@ public class GhidraBoyW3bOrder extends GhidraBoyPredicatedCalls {
     }
     if(lower.isEmpty())throw new IllegalStateException("Production did not generate lower-ID continuation");save("lower-id.json",lower);
     SoftwareCallApplication.apply(currentProgram,review,monitor);
-    String encoded=currentProgram.getOptions(ProgramMapping.OPTIONS).getString(SoftwareCallRegistry.KEY,null);Files.writeString(out.resolve("registry.json"),encoded);
+    String encoded=currentProgram.getOptions(ProgramMapping.OPTIONS).getString(stock?SoftwareCallRegistry.STOCK_KEY:SoftwareCallRegistry.KEY,null);Files.writeString(out.resolve("registry.json"),encoded);
     var registry=com.google.gson.JsonParser.parseString(encoded).getAsJsonObject();String alias=null;
     for(var item:registry.getAsJsonArray("sites")){var site=item.getAsJsonObject();if(site.get("canonicalAddress").getAsString().equals("0180")&&site.has("executionAlias")){alias=site.get("executionAlias").getAsString();break;}}
     if(alias==null)throw new IllegalStateException("Missing production caller execution alias");var root=currentProgram.getAddressFactory().getAddress(alias);
@@ -31,7 +32,7 @@ public class GhidraBoyW3bOrder extends GhidraBoyPredicatedCalls {
       request(getFunctionAt(root),owner,"root");
       for(var function:currentProgram.getFunctionManager().getFunctions(true))if(function.getEntryPoint().getOffset()==0x240)request(function,owner,"callee-"+function.getID());
     }finally{owner.dispose();}
-    Files.writeString(out.resolve("registry.json"),currentProgram.getOptions(ProgramMapping.OPTIONS).getString(SoftwareCallRegistry.KEY,null));
+    Files.writeString(out.resolve("registry.json"),currentProgram.getOptions(ProgramMapping.OPTIONS).getString(stock?SoftwareCallRegistry.STOCK_KEY:SoftwareCallRegistry.KEY,null));
     println("W3B_CAPTURE_COMPLETE setup");
   }
 }
